--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ footer {
     color: #000000;
     padding: 10px;
     position: relative;
-}
+        }
 @media (max-width: 768px) {
     .header1 {
         flex-direction: column;
@@ -192,15 +192,13 @@ footer {
         font-size: 24px;
         text-align: center;
     }
-    .main1 {
+    .main1, .main2 {
         flex-wrap: wrap;
+        justify-content: center;
+        overflow: hidden;
     }
-    .main1 img {
-        width: 100px;
-        height: 100px;
-    }
-    .main2 img {
-        width: 100px;
+    .main1 img, .main2 img {
+        max-width: 100px; 
         height: auto;
         margin: 10px;
     }
@@ -225,11 +223,17 @@ footer {
         text-align: center;
         margin: 10px auto;
     }
-    .main1 {
-        flex-direction: column;
+    .main0 h1 {
+        font-size: 20px;
     }
-    .main1 img {
-        width: 90%;
+    
+    .main1, .main2 {
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+    }
+    .main1 img, .main2 img {
+        max-width: 90%;
         height: auto;
         margin: 10px auto;
     }
@@ -246,5 +250,8 @@ footer {
     }
     footer p, footer h3 {
         text-align: center;
+    }
+    body {
+        overflow-x: hidden;
     }
     }
