--- a/style.css
+++ b/style.css
@@ -188,24 +188,27 @@ footer {
         padding: 10px;
         text-align: center;
     }
-    .main0 h1 {
-        font-size: 24px;
-        text-align: center;
-    }
     .main1, .main2 {
-        flex-wrap: wrap;
-        justify-content: center;
-        overflow: hidden;
-    }
-    .main1 img, .main2 img {
-        max-width: 100px; 
-        height: auto;
-        margin: 10px;
-    }
-    .main3 h1, .main3 ol {
-        font-size: 18px;
-        text-align: center;
-    }
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 25px;
+    box-shadow: 0px 0px 25px rgb(15, 252, 190);
+    padding: 10px;
+}
+
+.main1 img, .main2 img {
+    max-width: 100px;
+    margin: 10px;
+    border-radius: 25px;
+    transition: transform 0.3s;
+}
+
+.main1 img:hover, .main2 img:hover {
+    transform: scale(1.1);
+}
 }
 
 @media (max-width: 480px) {
@@ -228,15 +231,26 @@ footer {
     }
     
     .main1, .main2 {
-        flex-direction: column;
-        align-items: center;
-        overflow: hidden;
-    }
-    .main1 img, .main2 img {
-        max-width: 90%;
-        height: auto;
-        margin: 10px auto;
-    }
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 25px;
+    box-shadow: 0px 0px 25px rgb(15, 252, 190);
+    padding: 10px;
+}
+
+.main1 img, .main2 img {
+    max-width: 100px;
+    margin: 10px;
+    border-radius: 25px;
+    transition: transform 0.3s;
+}
+
+.main1 img:hover, .main2 img:hover {
+    transform: scale(1.1);
+}
     .typing {
         font-size: 18px;
     }
