--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -38,6 +38,19 @@
             text-decoration: none;
             color: white;
         }
+        .search {
+            height: 40px;
+            width:200px;
+            border-radius: 25px;
+            background-color: white;
+            color: #106EBE;
+            font-size: 18px;
+            position: absolute;
+            left: 500px;
+            padding: 0px 10px 0px 10px;
+            text-align: center;
+            border: 2px solid #fcd71f;
+}
     </style>
 </head>
 <body>
@@ -45,7 +58,7 @@
     <h1>Welcome Customer</h1>
     <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="/search">Search</a></li>
+        <li><a class="search" href="/search">Search</a></li>
         <li><a href="#">Summary</a></li>
         <li><a href="#">Logout</a></li>
     </ul>
