--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -8,22 +8,28 @@
         body {
             font-family: 'Times New Roman';
             background-color: #180161;
-            margin: 0;
+            margin: 2%;
             top: 0;
         }
         nav {
             width: 100%;
-            border-bottom: 0;
-            top: 0;
-            left: 0;
-            margin: 0;
-            background-color: #4f1787;
+            background: linear-gradient(135deg, #180161,#4f1787, #eb3678, #fb773c);
             color: #fff;
             position: fixed;
+            top: 0;
+            left: 0;
+            margin: 0;!important
             z-index: 100;
             display: flex;
             align-items: center;
+            padding: 10px 20px;
+            box-sizing: border-box;
+        }
+        nav h1 {
+            margin: 0;
             padding: 0;
+            font-size: 24px;
+            flex-grow: 1;
         }
         nav ul {
             display: flex;
@@ -39,18 +45,20 @@
             color: white;
         }
         .search {
-            height: 40px;
-            width:200px;
+            height: auto;
+            width: auto;
             border-radius: 25px;
             background-color: white;
-            color: #106EBE;
-            font-size: 18px;
-            position: absolute;
-            left: 500px;
-            padding: 0px 10px 0px 10px;
+            color: grey;
+            padding: 0px 10px;
             text-align: center;
             border: 2px solid #fcd71f;
-}
+        }
+        div {
+            background-color: white;
+            border-radius: 8px;
+            padding: 3px;
+        }
     </style>
 </head>
 <body>
@@ -58,10 +66,14 @@
     <h1>Welcome Customer</h1>
     <ul>
         <li><a href="#">Home</a></li>
-        <li><a class="search" href="/search">Search</a></li>
+        <li><input type="text" placeholder="Search here..." name="search" class="search"></li>
         <li><a href="#">Summary</a></li>
         <li><a href="#">Logout</a></li>
+        <li><a href="#">Profile</a></li>
     </ul>
-   </nav>
+   </nav><br><br><br><br>
+   <div>
+       <center><h3>Looking For ?</h3></center>
+   </div>
 </body>
 </html>
